# ModernBert-GTE-Model-Converter

./: .gitignore  ModernGTETFModel.py  ModernGTETFWeightConverter.py  README.md  model_conversion_validator.py  pyproject.toml  requirements.txt
tests/: test_create_local_sliding_window_mask.py  test_moderngte_tensorflow.py  test_multihead_attention.py  test_ntk_scaling_rotary_embedding.py  test_transformer_block_bdd.py
