[project]
name = "modernbert-gte-model-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.1.0",
    "astunparse==1.6.3",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "filelock==3.16.1",
    "flatbuffers==24.12.23",
    "fsspec==2024.12.0",
    "gast==0.6.0",
    "gdown>=5.2.0",
    "google-pasta==0.2.0",
    "grpcio==1.68.1",
    "h5py==3.12.1",
    "huggingface-hub==0.27.0",
    "idna==3.10",
    "jinja2==3.1.5",
    "keras==3.7.0",
    "libclang==18.1.1",
    "loguru>=0.7.3",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "ml-dtypes==0.3.2",
    "mpmath==1.3.0",
    "namex==0.0.8",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "nvitop>=1.4.0",
    "opt-einsum==3.4.0",
    "optree==0.13.1",
    "packaging==24.2",
    "protobuf==4.25.5",
    "pygments==2.18.0",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "safetensors==0.4.5",
    "six==1.17.0",
    "sympy==1.13.1",
    "tensorboard==2.16.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.16.2",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==2.5.0",
    "tf-keras==2.16.0",
    "tokenizers==0.21.0",
    "torch==2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm==4.67.1",
    "transformers==4.47.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "werkzeug==3.1.3",
    "wrapt==1.17.0",
]
